# nx-python-fastapi

./: README.md  package-lock.json  package.json  pyproject.toml
apps/api/: project.json  pyproject.toml
apps/api/api/: __init__.py  main.py
apps/api/tests/: test_hello.py
libs/lib1/: README.md  project.json  pyproject.toml
libs/lib1/lib1/: hello.py
libs/lib1/tests/: test_hello.py
